--- a/public/index.html
+++ b/public/index.html
@@ -193,7 +193,7 @@
                     data-aos="fade-up" data-aos-delay="300">We are
                     “อู้อี้อิอิ”. A team of passionate innovators whose paths crossed by chance. Although each of us are
                     from different disciplines, our connection and synergy is like no other.</p>
-                <img src="assets/images/team.png" class="w-full -mt-[150px] z-[1] relative" alt="" data-aos="fade-up"
+                <img src="assets/images/team.png" class="w-full lg:-mt-[150px] mt-[25px] mb-[25px] z-[1] relative" alt="" data-aos="fade-up"
                     data-aos-delay="500">
             </div>
             <div class="lg:basis-4/12 basis-full relative z-[9]">
@@ -281,7 +281,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/flowbite.min.js"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    
+
     <script>
         AOS.init();
     </script>
