--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="theme-color" content="#272727" />
     <title>Maa Ji</title>
     <link rel="icon" type="image/x-icon" href="assets/images/favico.ico">
     <link rel="stylesheet" href="assets/css/style.css">
