--- a/public/index.html
+++ b/public/index.html
@@ -65,8 +65,9 @@
                     </li>
                     <li>
                         <button type="button"
-                            class="w-full text-white bg-[#8C52FF] hover:bg-[#8C52FF]/[0.75] rounded-[12px] font-light text-[18px] px-4 py-2 text-center">Support
-                            us</button>
+                            class="w-full text-white bg-[#8C52FF] hover:bg-[#8C52FF]/[0.75] rounded-[12px] font-light text-[18px] px-4 py-2 text-center">
+                            <a href="#support" class="text-white no-underline">Support us</a>
+                        </button>
                     </li>
                 </ul>
             </div>
@@ -95,9 +96,9 @@
         <div class="container mx-auto p-4 mb-[50px]">
             <h1 class="font-bold md:text-[44.4px] text-[35px] text-center text-white" data-aos="fade-up">Our Application
             </h1>
-            <p class="text-white font-light text-[15.3] text-center" data-aos="fade-up">We simplify planning your
+            <p class="text-white font-light text-[16.7] text-center" data-aos="fade-up">We simplify planning your
                 group's <br> hangout to
-                just 3steps.</p>
+                just 3 steps.</p>
         </div>
 
         <div
@@ -105,22 +106,22 @@
             <img src="assets/images/bg.png"
                 class="w-full md:block hidden absolute z-[1] mt-[50px] left-[50%] -translate-x-[50%]" alt="">
             <div class="md:basis-4/12 basis-full relative z-[9]" data-aos="fade-up" data-aos-delay="300">
-                <h3 class="text-center text-white font-bold text-[25.9px]">Save!</h3>
-                <p class="text-center text-white font-light text-[11.7px]">Like what you see?<br>Save them all for your
+                <h3 class="text-center text-white font-bold text-[30.9px]">Save!</h3>
+                <p class="text-center text-white font-light text-[16.7px]">Like what you see?<br>Save them all for your
                     group!</p>
-                <img src="assets/images/phone-1.png" class="w-full mt-[25px]" alt="">
+                <img src="assets/images/phone-1.png" class="w-full md:w-full mt-[25px] sm:w-3/4 mx-auto" alt="">
             </div>
             <div class="md:basis-4/12 basis-full relative z-[9]" data-aos="fade-up" data-aos-delay="500">
-                <h3 class="text-center text-white font-bold text-[25.9px]">Sort!</h3>
-                <p class="text-center text-white font-light text-[11.7px]">Sort out your available dates,<br>preferences
+                <h3 class="text-center text-white font-bold text-[30.9px]">Sort!</h3>
+                <p class="text-center text-white font-light text-[16.7px]">Sort out your available dates,<br>preferences
                     and more</p>
-                <img src="assets/images/phone-2.png" class="w-full mt-[25px]" alt="">
+                <img src="assets/images/phone-2.png" class="w-full md:w-full mt-[25px] sm:w-3/4 mx-auto" alt="">
             </div>
             <div class="md:basis-4/12 basis-full relative z-[9]" data-aos="fade-up" data-aos-delay="700">
-                <h3 class="text-center text-white font-bold text-[25.9px]">Swipe!</h3>
-                <p class="text-center text-white font-light text-[11.7px]">Don't worry about the rest.<br>Swipe! swipe!
+                <h3 class="text-center text-white font-bold text-[30.9px]">Swipe!</h3>
+                <p class="text-center text-white font-light text-[16.7px]">Don't worry about the rest.<br>Swipe! swipe!
                     Swipe!</p>
-                <img src="assets/images/phone-3.png" class="w-full mt-[25px]" alt="">
+                <img src="assets/images/phone-3.png" class="w-full md:w-full mt-[25px] sm:w-3/4 mx-auto" alt="">
             </div>
         </div>
 
@@ -128,6 +129,18 @@
         <div class="relative">
             <div class="swiper mt-[50px]">
                 <div class="swiper-wrapper">
+
+                    <div class="swiper-slide">
+                        <!-- elements with  "swiper-carousel-animate-opacity" class will have animated opacity -->
+                        <div class="swiper-carousel-animate-opacity">
+                            <div class="bg-white w-full min-h-[645px] rounded-[25px] text-center p-[16px]">
+                                <h2 class="text-black font-bold text-[37.4px]">Save!</h2>
+                                <p class="text-black text-[12px]">Browse personalized hangouts for you. Save your new
+                                    favorite cafes, restaurants, workshop to your group plan and let us work it out!</p>
+                                <img src="assets/images/save-phone.png" class="w-full mt-[25px]" alt="">
+                            </div>
+                        </div>
+                    </div>
                     <div class="swiper-slide">
                         <!-- elements with  "swiper-carousel-animate-opacity" class will have animated opacity -->
                         <div class="swiper-carousel-animate-opacity">
@@ -144,10 +157,10 @@
                         <!-- elements with  "swiper-carousel-animate-opacity" class will have animated opacity -->
                         <div class="swiper-carousel-animate-opacity">
                             <div class="bg-white w-full min-h-[645px] rounded-[25px] text-center p-[16px]">
-                                <h2 class="text-black font-bold text-[37.4px]">Save!</h2>
-                                <p class="text-black text-[12px]">Browse personalized hangouts for you. Save your new
-                                    favorite cafes, restaurants, workshop to your group plan and let us work it out!</p>
-                                <img src="assets/images/save-phone.png" class="w-full mt-[25px]" alt="">
+                                <h2 class="text-black font-bold text-[37.4px]">Swipe!</h2>
+                                <p class="text-black text-[12px]">Swipe left and right through your friends' selections.
+                                    Discover deals and exclusive experiences curated for you by our AI.</p>
+                                <img src="assets/images/swipe-phone.png" class="w-full mt-[25px]" alt="">
                             </div>
                         </div>
                     </div>
@@ -155,10 +168,9 @@
                         <!-- elements with  "swiper-carousel-animate-opacity" class will have animated opacity -->
                         <div class="swiper-carousel-animate-opacity">
                             <div class="bg-white w-full min-h-[645px] rounded-[25px] text-center p-[16px]">
-                                <h2 class="text-black font-bold text-[37.4px]">Swipe!</h2>
-                                <p class="text-black text-[12px]">Swipe left and right through your friends' selections.
-                                    Discover deals and exclusive experiences curated for you by our AI.</p>
-                                <img src="assets/images/swipe-phone.png" class="w-full mt-[25px]" alt="">
+                                <h2 class="text-black font-bold text-[37.4px]">Go!</h2>
+                                <p class="text-black text-[12px]">Let our AI give your group the best plan for the day. Claim promotions and deals like never before.</p>
+                                <img src="assets/images/go!.png" class="w-full mt-[25px]" alt="">
                             </div>
                         </div>
                     </div>
@@ -172,7 +184,7 @@
 
     <div id="vision" class="mb-[50px]">
         <div class="container mx-auto p-4 mb-[50px]">
-            <h1 class="font-bold md:text-[44.4px] text-[35px] text-center text-white" data-aos="fade-up">Our Application
+            <h1 class="font-bold md:text-[44.4px] text-[35px] text-center text-white" data-aos="fade-up">Our Vision
             </h1>
             <img src="assets/images/hand.png" class="w-[164px] h-[160px] my-[25px] ml-[50%] -translate-x-[50%]" alt="">
             <p class="text-white font-bold text-[29.4px] text-center" data-aos="fade-up">“Journey of friendship<br>
@@ -180,7 +192,7 @@
                 Just click Maa-Ji!”</p>
             <p class="text-white text-[21.9px] text-center my-[25px]" data-aos="fade-up">Maa-Ji is a technology startup
                 aiming to be the
-                new wave in lifestyle<br>applications in the Asia-Pacific Region. </p>
+                new wave in lifestyle applications in the Asia-Pacific Region. Just like how friendship brought together the founders of Maa-Ji, we want our product to embody your friendship, one swipe at a time</p>
         </div>
     </div>
 
@@ -190,7 +202,7 @@
 
             <div class="lg:basis-8/12 basis-full relative z-[9]">
                 <h3 class="text-left text-white font-bold text-[46.6px]" data-aos="fade-up">About us</h3>
-                <p class="text-left text-white font-light text-[12.8px] w-full max-w-[340px] z-[2] relative"
+                <p class="text-left text-white font-light text-[16.8px] w-full max-w-[340px] z-[2] relative"
                     data-aos="fade-up" data-aos-delay="300">We are
                     “อู้อี้อิอิ”. A team of passionate innovators whose paths crossed by chance. Although each of us are
                     from different disciplines, our connection and synergy is like no other.</p>
@@ -258,9 +270,11 @@
                 single voice
                 matters,<br>Thank you. </h1>
 
-            <a href="#"
-                class="block text-[46.6px] font-bold text-white w-[350px] h-[96px] bg-[#8C52FF] rounded-[12px] flex items-center ml-[50%] !-translate-x-[50%] justify-center"
-                data-aos="fade-up">Register</a>
+            <a href="https://forms.gle/ETGtjafGN5S89w617"
+                class="block text-[46.6px] font-bold text-white w-[350px] h-[96px] bg-[#8C52FF] rounded-[12px] flex items-center justify-center ml-[50%] !-translate-x-[50%]"
+                data-aos="fade-up" target="_blank" rel="noopener noreferrer">
+                Register
+            </a>
         </div>
     </div>
 
