--- a/index.html
+++ b/index.html
@@ -17,7 +17,15 @@
 
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-M01W4TTNF4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
+  gtag('config', 'G-M01W4TTNF4');
+</script>
 <body class="bg-[#0B1215]">
 
     <div class="preloader w-full h-[100vh] bg-black fixed z-[999] flex justify-center items-center">
