--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 </head>
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-M01W4TTNF4"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-LPCGNXY0BD"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-M01W4TTNF4');
+  gtag('config', 'G-LPCGNXY0BD');
 </script>
 <body class="bg-[#0B1215]">
 
