--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
     gtag('config', 'G-LPCGNXY0BD');
     </script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="theme-color" content="#272727" />
@@ -36,7 +37,7 @@
     <nav class="bg-transparentborder-gray-200 dark:bg-gray-900">
         <div class="container flex flex-wrap items-center justify-between mx-auto p-4">
             <a href="/" class="flex items-center space-x-3 rtl:space-x-reverse w-[207px]">
-                <img src="assets/images/logo-maaji.png" class="w-full" alt="Flowbite Logo" />
+                <img src="assets/images/logo-maaji.png" style = "padding-top: 16px" class="w-full" alt="Flowbite Logo" />
             </a>
             <div class="flex lg:hidden md:order-2 space-x-3 md:space-x-0 rtl:space-x-reverse">
                 <button data-collapse-toggle="navbar-cta" type="button"
